main: Adjust Card  and change log window size.
Adjust the  Card  and changelog window size, also adjusted the transparency of sidebar and  adjust layout overall.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Find the latest device specific changelogs for various custom ROM builds with author's name.">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/webp" href="Android-15-AOSP.webp"> 
+        <link rel="icon" type="image/webp" href="Android-15-AOSP.webp">
     </head>
 
 <body>
@@ -51,7 +51,8 @@
             <div class="rom-cards">
                 <div class="rom-card" id="redmi-note-11-project-matrixx">
                     <img src="rom-banner/project-matrixx.webp" alt="Project Matrixx Banner" class="rom-banner">
-                    <h3>Project Matrixx <span class="rom-author">by tanvirr007 ✗ sayann70</span></h3>
+                    <h3>Project Matrixx</h3>
+                    <span class="rom-author">by tanvirr007 ✗ sayann70</span>
                     <div class="changelog">
                         <p>
                         <strong>Version 11.2.6</strong> (23/03/2025)</p>
@@ -126,13 +127,13 @@
                         <li>Initial A15 QPR1 Release</li>
                     </div>
                 </div>
-            </div>
+                </div>
         </section>
+
 
     </main>
 
     <footer class="footer">
-        <!-- <p>&copy; 2025 Shitij Halder & Debarpan Paul. All rights reserved.</p> -->
         <div class="footer-doodles">
             <img src="svg/stars-svgrepo-com.svg" alt="Star Doodle" class="footer-doodle">
             <img src="svg/moon-and-stars-svgrepo-com.svg" alt="Moon Doodle" class="footer-doodle">
