--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                         <li><a href="#redmi-note-11-project-matrixx">Project Matrixx</a></li>
                     </ul>
                 </li>
+                <li>
+                    <span>Realme Narzo 30</span>
+                    <ul class="roms-list">
+                        <li><a href="#Realme-Narzo-30-Project-Infinity-X">Project Infinity-X</a></li>
+                    </ul>
+                </li>
                  </ul>
                  <p class="sidebar-copyright">
                     A PROJECT FOR THE COMMUNITY.<br>
@@ -125,6 +131,58 @@
                         <p><strong>Version 11.1.0</strong> (02/02/2025)</p>
                         <ul>
                         <li>Initial A15 QPR1 Release</li>
+                    </div>
+                </div>
+                </div>
+        </section>
+        <section class="device-section" id="Realme Narzo 30">
+            <h2>Realme Narzo 30</h2>
+            <div class="rom-cards">
+                <div class="rom-card" id="Realme-Narzo-30-Project-Infinity-X">
+                    <img src="rom-banner/project-Infinity-X.webp" alt="Project Infinity-X Banner" class="rom-banner">
+                    <h3>Project Infinity</h3>
+                    <span class="rom-author">by ShitijHalder (shitijnotop)</span>
+                    <div class="changelog">
+                        <p>
+                        <strong>Version 2.7</strong> (24/04/2025)</p>
+                        <ul>
+                        <li>Source Changelog (<a href="https://t.me/ProjectInfinityX/1005">https://t.me/ProjectInfinityX/1005</a>)</li>
+                        <li>Import definitions for prebuilt HIDL interfaces</li>
+                        <li>Use 64-bit C2 service</li>
+                        </ul>
+                        <br>
+                        <p><strong>Version 2.5</strong> (30/11/2024)</p>
+                        <ul>
+                        <li>Source Changelog (<a href="https://t.me/ProjectInfinityX/652">https://t.me/ProjectInfinityX/652</a>)</li>
+                        <li>Added FM Radio for R7</li>
+                        <li>Fixed NFC path</li>
+                        </ul>
+                        <br>
+                        <p><strong>Version 2.1</strong> (30/11/2024)</p>
+                        <ul>
+                        <li>Source Changelog (<a href="https://t.me/ProjectInfinityX/652">https://t.me/ProjectInfinityX/652</a>)</li>
+                        </ul>
+                        <br>
+                        <p><strong>Version 2.0</strong> (10/11/2024)</p>
+                        <ul>
+                            <li>Source Changelog (<a href="https://t.me/ProjectInfinityX/613">https://t.me/ProjectInfinityX/613</a>)</li>
+                        <li>Initial Android 15 Build</li>
+                        <li>Initial OTA for Android 15 Release (Must prefer a clean flash if receiving this on Android 14 releases)</li>
+                        </ul>
+                        <br>
+                        <p><strong>Version 1.0</strong> (14/10/2024)</p>
+                        <ul>
+                        <li>Source Changelog (<a href="https://t.me/ProjectInfinityX/583">https://t.me/ProjectInfinityX/583</a>)</li>
+                        </ul>
+                        <br>
+                        <p><strong>Initial Android 14 Build</strong> (14/09/2024)</p>
+                        <ul>
+                        <li>Fixed Camera</li>
+                        <li>Fixed Bluetooh Disconnection </li>
+                        <li>Strombreaker Kernel 4.14.366</li>
+                        <li>Source Changelog (<a href="https://t.me/ProjectInfinityX/532">https://t.me/ProjectInfinityX/532</a>)</li>
+                        <li>Fixed device integrity and play certification passes by default</li>
+                        </ul>
                     </div>
                 </div>
                 </div>
