main: Added a share link function in ROM cards
Added a share link function in ROM cards and also added a share fallback for older and desktop devices.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
             <div class="rom-cards">
                 <div class="rom-card" id="redmi-note-11-project-matrixx">
                     <img src="rom-banner/project-matrixx.webp" alt="Project Matrixx Banner" class="rom-banner">
-                    <h3>Project Matrixx</h3>
+                    <div class="rom-title-share">
+                         <h3>Project Matrixx</h3>
+                         <span class="share-icon" data-rom-id="redmi-note-11-project-matrixx" title="Share this ROM">
+                             <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/icons/share-fill.svg" alt="Share" width="20" height="20">
+                         </span>
+                    </div>
                     <span class="rom-author">by tanvirr007 ✗ sayann70</span>
                     <div class="changelog">
                         <p>
@@ -140,7 +145,12 @@
             <div class="rom-cards">
                 <div class="rom-card" id="Realme-Narzo-30-Project-Infinity-X">
                     <img src="rom-banner/project-Infinity-X.webp" alt="Project Infinity-X Banner" class="rom-banner">
-                    <h3>Project Infinity</h3>
+                     <div class="rom-title-share">
+                        <h3>Project Infinity</h3>
+                        <span class="share-icon" data-rom-id="Realme-Narzo-30-Project-Infinity-X" title="Share this ROM">
+                              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/icons/share-fill.svg" alt="Share" width="20" height="20">
+                         </span>
+                    </div>
                     <span class="rom-author">by ShitijHalder (shitijnotop)</span>
                     <div class="changelog">
                         <p>
@@ -190,6 +200,9 @@
 
 
     </main>
+
+     <div id="toast-notification" class="toast-notification">Link copied to clipboard!</div>
+
 
     <footer class="footer">
         <div class="footer-doodles">
