main: Add new device Redmi Note 5 Pro (whyred) and update definitions.

--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
             <h2>Devices</h2>
             <ul>
                 <li>
-                    <span>Redmi Note 11</span>
+                    <span>Redmi Note 11 (spes)</span>
                     <ul class="roms-list">
-                        <li><a href="#redmi-note-11-project-matrixx">Project Matrixx</a></li>
+                        <li><a href="#Redmi-Note-11-Project-Matrixx">Project Matrixx</a></li>
                     </ul>
                 </li>
                 <li>
-                    <span>Realme Narzo 30</span>
+                    <span>Realme Narzo 30 (salaa)</span>
                     <ul class="roms-list">
                         <li><a href="#Realme-Narzo-30-Project-Infinity-X">Project Infinity-X</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <span>Redmi Note 5 Pro (whyred)</span>
+                    <ul class="roms-list">
+                        <li><a href="#Redmi-Note-5-Pro-Project-Matrixx">Project Matrixx</a></li>
                     </ul>
                 </li>
                  </ul>
@@ -52,14 +58,14 @@
     </div>
 
     <main>
-        <section class="device-section" id="Redmi Note 11">
-            <h2>Redmi Note 11</h2>
+        <section class="device-section" id="Redmi Note 11 (spes)">
+            <h2>Redmi Note 11 (spes)</h2>
             <div class="rom-cards">
-                <div class="rom-card" id="redmi-note-11-project-matrixx">
+                <div class="rom-card" id="Redmi-Note-11-Project-Matrixx">
                     <img src="rom-banner/project-matrixx.webp" alt="Project Matrixx Banner" class="rom-banner">
                     <div class="rom-title-share">
                          <h3>Project Matrixx</h3>
-                         <span class="share-icon" data-rom-id="redmi-note-11-project-matrixx" title="Share this ROM">
+                         <span class="share-icon" data-rom-id="Redmi-Note-11-Project-Matrixx" title="Share this ROM">
                              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/icons/share-fill.svg" alt="Share" width="20" height="20">
                          </span>
                     </div>
@@ -140,8 +146,8 @@
                 </div>
                 </div>
         </section>
-        <section class="device-section" id="Realme Narzo 30">
-            <h2>Realme Narzo 30</h2>
+        <section class="device-section" id="Realme Narzo 30 (salaa)">
+            <h2>Realme Narzo 30 (salaa)</h2>
             <div class="rom-cards">
                 <div class="rom-card" id="Realme-Narzo-30-Project-Infinity-X">
                     <img src="rom-banner/project-Infinity-X.webp" alt="Project Infinity-X Banner" class="rom-banner">
@@ -192,6 +198,61 @@
                         <li>Strombreaker Kernel 4.14.366</li>
                         <li>Source Changelog (<a href="https://t.me/ProjectInfinityX/532">https://t.me/ProjectInfinityX/532</a>)</li>
                         <li>Fixed device integrity and play certification passes by default</li>
+                        </ul>
+                    </div>
+                </div>
+                </div>
+        </section>
+        <section class="device-section" id="Redmi-Note-5-Pro (whyred)">
+            <h2>Redmi Note 5 Pro (whyred)</h2>
+            <div class="rom-cards">
+                <div class="rom-card" id="Redmi-Note-5-Pro-Project-Matrixx">
+                    <img src="rom-banner/Project-Matrixx-Polar-V11.4.0.webp" alt="Project Matrixx Banner" class="rom-banner">
+                     <div class="rom-title-share">
+                        <h3>Project Matrixx</h3>
+                        <span class="share-icon" data-rom-id="Redmi-Note-5-Pro-Project-Matrixx" title="Share this ROM">
+                              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/icons/share-fill.svg" alt="Share" width="20" height="20">
+                         </span>
+                    </div>
+                    <span class="rom-author">by Arijit Saha (Whyred_404)</span>
+                    <div class="changelog">
+                        <p>
+                        <strong>11.4.0</strong> (01/05/2025)</p>
+                        <ul>
+                        <li>Initial qpr2 release</li>
+                        </ul>
+                        <br>
+                        <p><strong>11.2.6</strong> (21/03/2025)</p>
+                        <ul>
+                        <li>Switched 2.45ghz cpu oc</li>
+                        <li>Added 3gb zram</li>
+                        <li>Added Dolby</li>
+                        </ul>
+                        <br>
+                        <p><strong>11.2.0</strong> (13/02/2025)</p>
+                        <ul>
+                        <li>Fixed mtp/sdcard issue</li>
+                        </ul>
+                        <br>
+                        <p><strong>11.2.5</strong> (01/03/2025)</p>
+                        <ul>
+                        <li>Synced with latest source</li>
+                        </ul>
+                        <br>
+                        <p><strong>11.2.0</strong> (12/02/2025)</p>
+                        <ul>
+                        <li>Synced with latest source</li>
+                        <li>Fixed mic echo</li>
+                        <li>Switched to erofs for gapps build</li>
+                        </ul>
+                        <br>
+                        <p><strong>11.1.0</strong> (03/02/2025)</p>
+                        <ul>
+                        <li>Initial release</li>
+                        <li>Synced with latest source</li>
+                        <li>Enabled haptic text cursor</li>
+                        <li>Enabled better haptic/vibration support</li>
+                        <li>Enabled wpa3 hotspot support</li>
                         </ul>
                     </div>
                 </div>
