main: Added Device codename logic.
Added Device codename logic.
Integrated in sidebar, rom cards, dynamic header and share logic as well.

--- a/index.html
+++ b/index.html
@@ -31,19 +31,22 @@
             <h2>Devices</h2>
             <ul>
                 <li>
-                    <span>Redmi Note 11 (spes)</span>
+                    <span>Redmi Note 11</span>
+                    <span class="codename">(spes)</span>
                     <ul class="roms-list">
                         <li><a href="#Redmi-Note-11-Project-Matrixx">Project Matrixx</a></li>
                     </ul>
                 </li>
                 <li>
-                    <span>Realme Narzo 30 (salaa)</span>
+                    <span>Realme Narzo 30</span>
+                    <span class="codename">(salaa)</span>
                     <ul class="roms-list">
                         <li><a href="#Realme-Narzo-30-Project-Infinity-X">Project Infinity-X</a></li>
                     </ul>
                 </li>
                 <li>
-                    <span>Redmi Note 5 Pro (whyred)</span>
+                    <span>Redmi Note 5 Pro</span>
+                    <span class="codename">(whyred)</span>
                     <ul class="roms-list">
                         <li><a href="#Redmi-Note-5-Pro-Project-Matrixx">Project Matrixx</a></li>
                     </ul>
@@ -59,7 +62,7 @@
 
     <main>
         <section class="device-section" id="Redmi Note 11 (spes)">
-            <h2>Redmi Note 11 (spes)</h2>
+            <h2>Redmi Note 11 <span class="codename">(spes)</span></h2>
             <div class="rom-cards">
                 <div class="rom-card" id="Redmi-Note-11-Project-Matrixx">
                     <img src="rom-banner/project-matrixx.webp" alt="Project Matrixx Banner" class="rom-banner">
@@ -147,7 +150,7 @@
                 </div>
         </section>
         <section class="device-section" id="Realme Narzo 30 (salaa)">
-            <h2>Realme Narzo 30 (salaa)</h2>
+            <h2>Realme Narzo 30 <span class="codename">(salaa)</span></h2>
             <div class="rom-cards">
                 <div class="rom-card" id="Realme-Narzo-30-Project-Infinity-X">
                     <img src="rom-banner/project-Infinity-X.webp" alt="Project Infinity-X Banner" class="rom-banner">
@@ -204,7 +207,7 @@
                 </div>
         </section>
         <section class="device-section" id="Redmi-Note-5-Pro (whyred)">
-            <h2>Redmi Note 5 Pro (whyred)</h2>
+            <h2>Redmi Note 5 Pro <span class="codename">(whyred)</span></h2>
             <div class="rom-cards">
                 <div class="rom-card" id="Redmi-Note-5-Pro-Project-Matrixx">
                     <img src="rom-banner/Project-Matrixx-Polar-V11.4.0.webp" alt="Project Matrixx Banner" class="rom-banner">
